# zkillboard-ws-py

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  tox.ini
examples/: example.py
src/zkillboard/: __init__.py  client.py  config.py  esi.py  eveuniverse.py  helpers.py  killmails.py  serializers.py
tests/: factories.py  fixtures.py  test_killmails.py
