[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zkillboard-ws-py"
authors = [{ name = "Erik Kalkoken", email = "kalkoken87@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["aiohttp", "aiorun"]

[project.urls]
Home = "https://gitlab.com/ErikKalkoken/aa-zkillboard"

[tool.flit.module]
name = "zkillboard"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.'MASTER']
ignore-patterns = ["__init__.py"]
ignore-paths = ["^.*/tests/.*$"]

[tool.pylint.'BASIC']
good-names = ["i", "j", "k", "ex", "id", "x", "y", "z", "ws"]

[tool.pylint.'FORMAT']
max-line-length = 120

# [tool.pylint.'MESSAGES CONTROL']
# disable = [
#     "cyclic-import",
#     "fixme",
#     "too-many-arguments",
#     "too-few-public-methods",
#     "import-outside-toplevel",
#     "imported-auth-user",
#     "too-many-instance-attributes",
# ]
